--- a/main.css
+++ b/main.css
@@ -10,13 +10,11 @@ button {
   cursor: pointer;
 }
 
-
-
 body {
-  font-family: 'lato', sans-serif; 
+  font-family: 'lato', sans-serif;
   font-size: 20px;
   color: #444;
-  background-color: #FEFEFE;
+  background-color: #fefefe;
   text-align: center;
   line-height: 1.5;
   margin: 0;
@@ -28,7 +26,7 @@ body {
 
 header {
   font-family: 'Merriweather', serif;
-  background-color: #DEE9ED;
+  background-color: #dee9ed;
   width: 100%;
   text-align: center;
   padding-top: 50px;
@@ -38,7 +36,6 @@ header {
 header h1 {
   margin: 0;
 }
-
 
 .header-img img {
   width: 100px;
@@ -66,13 +63,10 @@ nav {
   z-index: 10;
 }
 
-
-
 .mobileNav ul {
   display: flex;
   justify-content: space-evenly;
   padding: 0;
-
 }
 
 .mobileNav li {
@@ -89,8 +83,6 @@ nav {
   font-size: 15px;
 }
 
-
-
 /* ===================================
 ABOUT ME STYLES
 =================================== */
@@ -105,8 +97,8 @@ section {
   min-height: 200px;
   padding: 6% 10px;
   background-color: white;
-  margin-left:5px;
-  margin-right:5px;
+  margin-left: 5px;
+  margin-right: 5px;
   margin-bottom: 10px;
   text-align: left;
   border-bottom: 1px groove #444;
@@ -143,7 +135,6 @@ img {
   text-align: center;
 }
 
-
 /* ===================================
 Project Styles
 =================================== */
@@ -158,7 +149,6 @@ a:visited {
   color: inherit;
 }
 
-
 .half {
   display: block;
 }
@@ -168,7 +158,7 @@ a:visited {
 }
 .project-image a img {
   width: 100%;
-  box-shadow: 4px 4px 4px 4px rgba(0, 0, 0, .2);
+  box-shadow: 4px 4px 4px 4px rgba(0, 0, 0, 0.2);
   margin: 5px auto;
 }
 
@@ -196,18 +186,47 @@ a:visited {
 .half img {
   width: 50%;
 }
+/* 
+.mongoIcon {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 85px;
+  width: 35px;
+}
 
+.mongoIcon img {
+  width: 40px;
+  height: 35px;
+  margin: 0;
+  filter: contrast(50%);
+} */
 
-.icons {
-  font-family: 'lato', sans-serif; 
+.icons,
+.mongoIcon {
+  font-family: 'lato', sans-serif;
   display: flex;
   justify-content: space-evenly;
   text-align: center;
-} 
+}
+
+.mongoIcon {
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: column;
+  width: fit-content;
+}
+
+.mongoIcon img {
+  width: 35px;
+  filter: contrast(50%);
+  margin: 0;
+}
 
 .icons i {
   font-size: 30px;
-} 
+}
 
 .icon-font {
   font-family: 'lato', sans-serif;
@@ -226,10 +245,8 @@ h3 {
   text-align: left;
 }
 
-
-
 .social-icons {
-  font-family: 'lato', sans-serif; 
+  font-family: 'lato', sans-serif;
   width: 100%;
   display: flex;
   justify-content: space-evenly;
@@ -256,7 +273,6 @@ footer {
 /* THE FOLLOWING RULESETS ARE FOR TABLET DISPLAY */
 
 @media screen and (min-width: 450px) {
-
   .header-img img {
     width: 150px;
     height: 170px;
@@ -267,11 +283,10 @@ footer {
   PROFILE STYLES
   ======================================== */
   .profile {
-  width: 80%;
-  margin: 0 auto;
+    width: 80%;
+    margin: 0 auto;
   }
 
-  
   .thirds {
     display: flex;
   }
@@ -283,7 +298,7 @@ footer {
   .half {
     display: block;
   }
-  
+
   .project-image a {
     width: 100%;
   }
@@ -291,7 +306,7 @@ footer {
     width: 100%;
     margin: 5px auto;
   }
-  
+
   .project-buttons a {
     text-align: center;
     background-color: #173753;
@@ -304,19 +319,19 @@ footer {
     margin: 20px auto;
     cursor: pointer;
   }
-  
+
   .project-buttons button {
     width: 70%;
   }
-  
+
   .project {
     width: 100%;
   }
-  
+
   .half img {
     width: 50%;
   }
-  
+
   /* =============================
   FOOTER STYLES
   ============================= */
@@ -328,14 +343,11 @@ footer {
   .social-icons i {
     font-size: 30px;
   }
-  
 }
 
 /* THE FOLLOWING ARE FOR DESKTOP DISPLAYS */
 
 @media screen and (min-width: 800px) {
-
-
   header {
     font-family: 'Merriweather', serif;
     width: 100%;
@@ -347,8 +359,8 @@ footer {
     border-radius: 50%;
     margin: 50px auto 20px auto;
   }
- 
-/* ====================================================
+
+  /* ====================================================
 NAV STYLES
 ==================================================== */
 
@@ -369,16 +381,15 @@ NAV STYLES
     list-style: none;
     padding: 0;
   }
-  
+
   nav .right i {
     font-size: 30px;
     margin: 10px 30px;
   }
-  
+
   nav li {
     padding: 10px;
   }
-  
 
   .mobileNav {
     display: none;
@@ -386,7 +397,7 @@ NAV STYLES
 
   nav .navlinks {
     display: inherit;
-    margin: 0 20px;;
+    margin: 0 20px;
     padding: 0;
     list-style: none;
   }
@@ -396,12 +407,11 @@ NAV STYLES
     justify-content: space-between;
   }
 
-
   .right {
     width: 50%;
     justify-content: flex-end;
   }
-/* 
+  /* 
   ======================================
   PROFILE STYLES
   ====================================== */
@@ -411,11 +421,10 @@ NAV STYLES
     margin: 10px auto;
   }
 
-  
   .skills ul {
     list-style: none;
   }
-  
+
   ul span {
     font-weight: bold;
   }
@@ -427,14 +436,13 @@ NAV STYLES
   .thirds .col {
     width: 33%;
   }
-  
 
   .half {
     display: flex;
     align-items: center;
   }
 
-  .half .project-buttons{
+  .half .project-buttons {
     width: 50%;
     flex-direction: column;
     justify-content: right;
@@ -459,7 +467,6 @@ NAV STYLES
     font-size: 40px;
   }
 
-
   /* =========================
   FOOTER STYLES
   ========================= */
@@ -475,6 +482,5 @@ NAV STYLES
 
   .social-icons i {
     font-size: 40px;
-  } 
-
+  }
 }
