--- a/main.css
+++ b/main.css
@@ -215,7 +215,7 @@ a:visited {
   align-items: center;
   justify-content: space-between;
   flex-direction: column;
-  width: fit-content;
+  width: 50px;
 }
 
 .mongoIcon img {
